--- a/todoList/src/main/resources/templates/todo/detail.html
+++ b/todoList/src/main/resources/templates/todo/detail.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>할 일 제목</title>
+  <title th:text="${todo.todoTitle}">할 일 제목</title>
   <link rel="stylesheet" href="/css/detail.css">
 </head>
 <body>
-  <h3>할 일 제목</h3>
+  <h3 th:text="${todo.todoTitle}">할 일 제목</h3>
 
   <table border="1">
     <tr>
       <th>번호</th>
-      <td>할 일 번호</td>
+      <td th:text="${todo.todoNo}">할 일 번호</td>
     </tr>
 
     <tr>
       <th>등록 날짜</th>
-      <td></td>
+      <td>[[${todo.regDate}]]</td>
     </tr>
 
     <tr>
@@ -25,19 +25,27 @@
       <td>
         <button type="button"
           class="complete-btn"
+          th:text="${todo.complete}"
         >완료 여부</button>
       </td>
     </tr>
     
     <tr>
       <th>내용</th>
-      <td class="todo-content"></td>
+      <td class="todo-content" th:text="${todo.todoContent}"></td>
     </tr>
   </table>
 
+  <!--
+  data-* 속성
+  - 데이터에 대한 확장성을 고려하여 설계된 속성
+  - js에서 요소.dataset을 이용해 해당 값을 얻어갈 수 있음
+  -->
   <button id="goToList">목록으로</button>
   <button id="updateBtn">수정</button>
-  <button id="deleteBtn">삭제</button>
+  <button id="deleteBtn"
+    th:data-todo-no="${todo.todoNo}"
+  >삭제</button>
 
 
   <!-- spring에서 정적자원 요청(접근) 시 static 폴더 기준으로 작성 -->
