--- a/todoList/src/main/resources/templates/todo/detail.html
+++ b/todoList/src/main/resources/templates/todo/detail.html
@@ -26,6 +26,7 @@
         <button type="button"
           class="complete-btn"
           th:text="${todo.complete}"
+          th:data-todo-no="${todo.todoNo}"
         >완료 여부</button>
       </td>
     </tr>
@@ -42,11 +43,13 @@
   - js에서 요소.dataset을 이용해 해당 값을 얻어갈 수 있음
   -->
   <button id="goToList">목록으로</button>
-  <button id="updateBtn">수정</button>
+  <button id="updateBtn"
+    th:data-todo-no="${todo.todoNo}">수정</button>
   <button id="deleteBtn"
     th:data-todo-no="${todo.todoNo}"
   >삭제</button>
 
+  <th:block th:replace="~{common/footer}"></th:block>
 
   <!-- spring에서 정적자원 요청(접근) 시 static 폴더 기준으로 작성 -->
   <script src="/js/detail.js"></script>
