--- a/todoList/src/main/resources/templates/todo/update.html
+++ b/todoList/src/main/resources/templates/todo/update.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title th:text="|${todo.todoNo}번 할 일 수정|">Document</title>
   <link rel="stylesheet" href="/css/update.css">
 </head>
 <body>
-  <h1></h1>
+  <h1 th:text="|${todo.todoNo}번 할 일 수정|"></h1>
   <hr>
 
   <form action="/todo/update" method="post">
     <div>
-      제목: <input type="text" name="todoTitle">
+      제목: <input type="text" name="todoTitle"
+          th:value="${todo.todoTitle}">
     </div>
 
     <div>
@@ -20,16 +21,17 @@
             th:value가 아닌 th:text에 작성해야한다! 
       -->
       <textarea name="todoContent"
-        cols="50" rows="5" placeholder="상세 내용"></textarea>
+        cols="50" rows="5" placeholder="상세 내용"
+        th:text="${todo.todoContent}"></textarea>
     </div>
 
     <!-- 할 일 번호를 숨겨둠 -->
-    <input type="hidden" name="todoNo">
+    <input type="hidden" name="todoNo" th:value="${param.todoNo}">
 
     <button>수정하기</button>
   </form>
 
-  
+  <th:block th:replace="~{common/footer}"></th:block>
 
 </body>
 </html>
